Fixed nav spacing

--- a/css/WebPaint.css
+++ b/css/WebPaint.css
@@ -21,7 +21,7 @@ ul.navList{
 	padding-left:0px;
 	font-size: 18pt;
 	position:absolute;
-	top:90px;
+	top:92px;
 }
 ul.navList li{
 	background-color: coral;
